Fixing Z-Indexes

--- a/css/media.css
+++ b/css/media.css
@@ -150,7 +150,7 @@
 		left: -29px;
 		padding: 53px 0 16px;
 		width: 216px;
-		z-index: 1;
+		z-index: 10000;
 		display: none;
 	}
 	.header ul li ul li {
