--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 .header {
 	position: absolute;
-	z-index: 1;
+	z-index: 10000;
 	display: none;
 }
 .header .container {
@@ -61,7 +61,7 @@ body {
 	display: block;
 	position: absolute;
 	left: 50%;
-	z-index: 1;
+	z-index: 10000;
 }
 a.logo {
 	background-image: url(img/logo.png);
@@ -72,7 +72,7 @@ a.logo {
 	width: 36px;
 	height: 36px;
 	cursor: pointer;
-	z-index: 2;
+	z-index: 20000;
 }
 .burger:not(.close_btn) {
 	background: url(img/burger.png) no-repeat 0 7px;
